# py-movie-media-manager

./: .gitignore  README.md  VERSION  launch_gui.sh  movie_organizer.py  movie_organizer_gui.py  open_and_take_screenshot.sh  pip_requirements-dev.txt  pip_requirements.txt  pyproject.toml  take_screenshot.sh
docs/: BACKGROUND_JOBS.md  CHANGELOG.md  HOW_TO_PROPERLY_DOWNLOAD_IMDB_PARENTS_GUIDE_DATA.md  INSTALL.md  MOVIE_ORGANIZATION_UI_UX_WORKFLOW.md  NFO_FILE_FORMAT.md  OPENSUBTITLES_COM_API.md  PYTHON_PORT_PLAN.md  TASK_API.md  USAGE.md  WAF_CHALLENGES.md
moviemanager/: __init__.py
moviemanager/api/: __init__.py  api_cache.py  artwork_service.py  download_errors.py  match_confidence.py  movie_api.py  scan_service.py  scrape_service.py  search_service.py  subtitle_service.py  task_api.py  trailer_service.py
moviemanager/core/: __init__.py  constants.py  media_probe.py  settings.py  utils.py
moviemanager/scraper/: __init__.py  browser_cookies.py  fanart_scraper.py  imdb_parental_guide_scraper.py  imdb_scraper.py  (+6 more)
tests/: conftest.py  test_api_cache.py  test_browser_cookies.py  test_cli.py  test_cli_integration.py  test_file_classifier.py  test_file_collector.py  test_filename_parser.py  test_format_movie.py  test_gui_smoke.py  test_image_label.py  test_imdb_browser_transport.py  test_import_requirements.py  test_match_confidence.py  test_nfo_round_trip.py  test_no_pyside6_in_core.py  test_renamer.py  test_scanner.py  test_scraper_fanart.py  test_scraper_imdb.py  test_scraper_imdb_live.py  test_scraper_registry.py  test_scraper_tmdb.py  test_template_engine.py
(+54 files in other folders)
